# PaddleOCR

./: aggregate_boxes.py  exemple.py  install.sh  pyproject.toml  readme.md
test-files/: ticket-de-caisse-5_OCRised_text.txt
test-files/ppocr_img/table/: paper-image_OCRised_text.txt  table_OCRised_text.txt
