[tool.poetry]
name = "test-paddleocr"
version = "0.1.0"
description = ""
authors = ["EtiMag <etienne.maeght@insee.fr>"]
readme = "README.md"
packages = [{include = "test_paddleocr"}]

[tool.poetry.dependencies]
python = "3.8.16"
paddlepaddle = "^2.4.2"
paddleocr = "^2.6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
