[tool.poetry]
name = "paddleocr-etimag"
version = "0.1.0"
description = ""
authors = ["EtiMag <etienne.maeght@insee.fr>"]
readme = "README.md"
packages = [{include = "paddleocr_etimag"}]

[tool.poetry.dependencies]
python = "^3.8"
paddlepaddle = "^2.4.2"
paddleocr = "^2.6.1.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
